--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1705,4 +1705,12 @@
   pages={279-293}
 }
 
+@article{Maass1996NetworksOS,
+  title={Networks of Spiking Neurons: The Third Generation of Neural Network Models},
+  author={Wolfgang Maass},
+  journal={Electron. Colloquium Comput. Complex.},
+  year={1996},
+  volume={TR96}
+}
+
 
