--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,4 +1,4 @@
-\ThesisTitle{Auto-organisation Décentralisée Multi-Cartes}
+\ThesisTitle{\'Etude d'un modèle d'architecture modulaire non-hiérarchique de cartes auto-organisatrices s'appuyant sur une recherche de consensus}
 \ThesisDate{ ? juin 2023}
 \ThesisAuthor{Noémie Gonnier}
 \ThesisUL
