--- a/02-Architectures/source.tex
+++ b/02-Architectures/source.tex
@@ -158,13 +158,11 @@ Une carte de Kohonen ne doit cependant pas être considérée comme une modélis
 
 L'aspect multisensoriel du traitement de l'information par le cerveau vient des connexions entre aires corticales.
 Cette connectivité peut-être étudiée de plusieurs points de vue~: d'un point de vue structurel, en se basant sur des éléments anatomiques ou d'un point de vue fonctionnel.
-Dans le cas fonctionnel, la connexion de deux aires est déduite de l'existence de dépendances statistiques entre l'activation des neurones des deux aires, observées par éléctroencéphalographie ou IRM fonctionnelle. Il faut noter cependant que ces observations traduisent une relation statistique et pas forcément une relation de cause à effet. 
+Dans le cas fonctionnel, la connexion de deux aires est déduite de l'existence de dépendances statistiques entre l'activation des neurones des deux aires, observées par électroencéphalographie ou IRM fonctionnelle. Il faut noter cependant que ces observations traduisent une relation statistique et pas forcément une relation de cause à effet. 
 La modélisation de la connectivité physique de ces aires à partir des observations reste donc l'objet de différentes théories cherchant à reproduire ces corrélations. 
-Dans tous les cas, la présence d'aires distinctes communicantes fait l'objet d'un consensus. 
-Nous pouvons citer comme exemple fonctionnel de traitement multisensoriel de l'information l'effet ventriloque \cite{Bonath2007NeuralBO}, qui correspond à l'illusion que la source sonore provient de la marionnette du ventriloque, dont la bouche s'agite de façon coordonnée aux paroles, alors qu'elle provient en réalité du ventriloque lui-même.
-Lors de cet effet, une activité apparaît dans le cortex visuel et auditif pour les neurones sensibles à l'emplacement exact de la source des stimuli dans chacune des modalités. 
-Après quelques millisecondes, on observe une activité auditive pour les neurones sensibles à l'emplacement spatial de la source du stimulus visuel \cite{lefort_apprentissage_2012}.
-Un autre exemple est celui de l'effet McGurk~\cite{McGurk1976HearingLA}~: ces psychologues ont montré que la présentation du son \og ba \fg{} à un sujet associée à la présentation d'une vidéo d'une bouche prononçant \og ga \fg{} amènent le sujet à indiquer qu'il a entendu le son \og da \fg{}.
+Un exemple fonctionnel de traitement multisensoriel de l'information est l'effet ventriloque \cite{Bonath2007NeuralBO} qui crée l'illusion que la source sonore provient de la marionnette du ventriloque dont les mouvements de bouche sont coordonnés avec les paroles, alors qu'elle émane en réalité du ventriloque lui-même. Ce phénomène entraîne une activité dans le cortex visuel et auditif au niveau des neurones correspondant à l'emplacement exact de la source des stimuli de chacune des modalités.
+Après quelques millisecondes, une activité émerge dans le cortex auditif au niveau des neurones sensibles à l'emplacement spatial de la source du stimulus visuel, témoignant d'une interaction entre les cortex visuels et auditifs~\cite{lefort_apprentissage_2012}.
+Un autre exemple est l'effet McGurk~\cite{McGurk1976HearingLA}~: ces psychologues ont montré que la présentation du son \og ba \fg{} à un sujet associée à la présentation d'une vidéo d'une bouche prononçant \og ga \fg{} amènent ce sujet à indiquer qu'il a entendu le son \og da \fg{}.
 Historiquement, le traitement de l'information multisensorielle dans le cortex cérébral a été modélisé comme hiérarchique, des aires dites bas niveau alimentant des aires haut niveau permettant le traitement de l'information multimodale. 
 Si l'existence d'une hiérarchie du traitement de l'information par des aires haut niveau et bas niveau reste vérifiée, de nombreux travaux montrent également l'existence de connexions directes entre aires sensorielles, dites bas-niveau, illustrées en figure~\ref{fig:primate}.
 Anatomiquement, de nombreuses connexions entre les aires corticales dédiées au traitement d'une modalité sensorielle ont été mises en évidence chez différentes espèces, par exemple en \cite{primate_cortex_91,Calvert2004MultisensoryIM, Cappe2009MultisensoryAP,Foxe2005TheCF,Schroeder2005MultisensoryCT}.
